[package]
name = "delink"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4.3"
log = "0.4.22"
md5 = "0.8.0"
sha2 = "0.10.8"
thiserror = "2.0.0"
sha1 = "0.10.6"
hmac = "0.12.1"
aes = "0.8.4"
cbc = { version = "0.1.2", features = ["std"] }

# Only used for the binary, not the library
env_logger = { version = "0.11.5", optional = true }

[features]
default = ["bin-only"]
# Features only required by the binary
bin-only = ["dep:env_logger"]