[package]
name = "delink"
version = "0.1.0"
edition = "2024"

[lints.clippy]
redundant_type_annotations = "warn"
redundant_clone = "warn"
redundant_as_str = "warn"
panic = "warn"

[dependencies]
hex = "0.4.3"
log = "0.4.22"
md-5 = "0.11.0"
sha2 = "0.11.0"
thiserror = "2.0.0"
sha1 = "0.11.0"
hmac = "0.13.0"
aes = "0.9.1"
cbc = "0.2.1"

# Only used for the binary, not the library
env_logger = { version = "0.11.5", optional = true }

[features]
default = ["bin-only"]
# Features only required by the binary
bin-only = ["dep:env_logger"]
